--- a/composer.json
+++ b/composer.json
@@ -76,5 +76,10 @@
             "allow-contrib": false,
             "require": "7.3.*"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^12.4",
+        "symfony/maker-bundle": "^1.64",
+        "symfony/phpunit-bridge": "^7.3"
     }
 }
