--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,8 +1,7 @@
 security:
     password_hashers:
-        App\Entity\User:
-            algorithm: auto
-
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+        
     providers:
         app_user_provider:
             entity:
@@ -13,7 +12,7 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
-
+            
         login:
             pattern: ^/api/login
             stateless: true
@@ -21,6 +20,11 @@ security:
                 check_path: /api/login
                 success_handler: lexik_jwt_authentication.handler.authentication_success
                 failure_handler: lexik_jwt_authentication.handler.authentication_failure
+
+        register:
+            pattern: ^/api/register
+            stateless: true
+            security: false
 
         api:
             pattern: ^/api
@@ -31,12 +35,3 @@ security:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         - { path: ^/api/register, roles: PUBLIC_ACCESS }
         - { path: ^/api, roles: ROLE_USER }
-
-when@test:
-    security:
-        password_hashers:
-            Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
-                algorithm: auto
-                cost: 4
-                time_cost: 3
-                memory_cost: 10
