--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,11 @@
+# config/routes.yaml
 controllers:
     resource:
         path: ../src/Controller/
         namespace: App\Controller
     type: attribute
+
+api:
+    resource: ../src/Controller/
+    type: attribute
+    prefix: /api
