--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,15 +1,11 @@
-# see https://symfony.com/doc/current/reference/configuration/framework.html
+# config/packages/framework.yaml
 framework:
     secret: '%env(APP_SECRET)%'
+    router:
+        utf8: true
+        default_uri: '%env(DEFAULT_URI)%'
 
-    # Note that the session will be started ONLY if you read or write from it.
-    session: true
-
-    #esi: true
-    #fragments: true
-
-when@test:
+when@prod:
     framework:
-        test: true
-        session:
-            storage_factory_id: session.storage.factory.mock_file
+        router:
+            strict_requirements: null
