--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -16,6 +16,7 @@ security:
         login:
             pattern: ^/api/login
             stateless: true
+            provider: app_user_provider
             json_login:
                 check_path: /api/login
                 username_path: email
@@ -26,6 +27,7 @@ security:
         api:
             pattern: ^/api
             stateless: true
+            provider: app_user_provider
             jwt: ~
 
         main:
