Untrack .env and ignore it

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 
 ###> symfony/framework-bundle ###
+/.env
 /.env.local
 /.env.local.php
 /.env.*.local
@@ -17,5 +18,5 @@
 /phpunit.xml
 /.phpunit.cache/
 ###< phpunit/phpunit ###
-. env 
+
 
