--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "lexik/jwt-authentication-bundle": "^3.1",
         "nelmio/cors-bundle": "^2.6",
         "nyholm/psr7": "^1.8",
-        "openai-php/client": "^0.18.0",
+        "openai-php/client": "*",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.3",
         "symfony/console": "7.3.*",
@@ -22,6 +22,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
         "symfony/http-client": "^7.3",
+        "symfony/messenger": "7.3.*",
         "symfony/property-access": "7.3.*",
         "symfony/property-info": "7.3.*",
         "symfony/runtime": "7.3.*",
