--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,7 +13,10 @@ services:
             - '../src/DependencyInjection/'
             - '../src/Entity/'
             - '../src/Kernel.php'
-            - '../src/Service/Ratelimiter.php'  # Add this to fix the error
+            - '../src/Service/Ratelimiter.php'
+            - '../src/Service/RateLimiter.tmp'
+            - '../src/Eventsubscriber/'  # Exclude old lowercase folder
+            - '../src/EventSubscriber/'  # Exclude to prevent duplicate loading
 
     App\Service\OpenAIService:
         arguments:
